<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackMyStock</string>
    <string name="dummy_button">Dummy Button</string>
    <!-- main title text -->
    <string name="main_title_text">TrackMyStock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_company">Add Company</string>
    <string name="action_discard_company">Delete Company</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- EmptyListActivity wording -->
    <string name="add_first_company">Add your first company</string>
    <string name="plus_symbol">+</string>

    <!-- Company name hint (AddCompanyActivity) -->
    <string name="company_name_hint">Company name</string>

    <!-- Add company button text -->
    <string name="add_company_accept_button">Accept</string>

    <!--DetailActivity elements -->
    <string name="company_name">Name</string>
    <string name="company_price">Price</string>
    <string name="company_date">Last update</string>
    <string name="company_high">High</string>
    <string name="company_low">Low</string>
    <string name="company_historic">Historic</string>

    <!--Settings elements -->
    <string name="pref_historic_key">historic_range</string>
    <string name="pref_historic_title">Select historic range</string>
    <string name="pref_historic_week">Week</string>
    <string name="pref_historic_month">Month</string>
    <string name="pref_historic_default">week</string>

    <!-- Alert dialog elements -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message">Are you sure you want to delete the company?</string>
    <string name="dialog_title">Confirm deletion</string>

    <!-- Activity labels -->
    <string name="empty_activity_label">Add</string>
    <string name="add_activity_label">New</string>
    <string name="detail_activity_label">Detail</string>
    <string name="settings_activity_label">Settings</string>
    <string name="main_activity_label">TrackMyStock</string>

    <!-- Historic fragment elements -->
    <string name="historic_loading">Loading</string>
    <string name="historic_no_results">No historic found</string>
    <string name="historic_please_wait">Please wait while loading</string>

    <!-- Sync adapter-->
    <string name="sync_account_type">trackmystock.example.com</string>
    <string name="content_authority">com.pedrovalencia.trackmystock.app</string>

</resources>
