<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pedrovalencia.trackmystock.activities.DetailActivity$PlaceholderFragment">


    <!-- Name -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_fragment_name_label"
            android:text="@string/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"/>

        <TextView
            android:text="Nextub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/detail_fragment_name_label"
            android:layout_toEndOf="@+id/detail_fragment_name_label"
            android:layout_marginLeft="40dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"/>
    </RelativeLayout>

    <!-- Price -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_fragment_price_label"
            android:text="@string/company_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"/>

        <TextView
            android:text="Nextub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/detail_fragment_price_label"
            android:layout_toEndOf="@+id/detail_fragment_price_label"
            android:layout_marginLeft="40dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"/>
    </RelativeLayout>

    <!-- Last update -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_fragment_date_label"
            android:text="@string/company_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"/>

        <TextView
            android:text="24/10/2014 19:00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/detail_fragment_date_label"
            android:layout_toEndOf="@+id/detail_fragment_date_label"
            android:layout_marginLeft="40dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"/>
    </RelativeLayout>

    <!-- High -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_fragment_high_label"
            android:text="@string/company_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"/>

        <TextView
            android:text="24/10/2014 19:00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/detail_fragment_high_label"
            android:layout_toEndOf="@+id/detail_fragment_high_label"
            android:layout_marginLeft="40dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"/>
    </RelativeLayout>

    <!-- Low -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_fragment_low_label"
            android:text="@string/company_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"/>

        <TextView
            android:text="24/10/2014 19:00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/detail_fragment_low_label"
            android:layout_toEndOf="@+id/detail_fragment_low_label"
            android:layout_marginLeft="40dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"/>
    </RelativeLayout>

    <!-- TODO Graphic -->



</LinearLayout>
